--- a/Feature_Extractor.ipynb
+++ b/Feature_Extractor.ipynb
@@ -3722,10 +3722,260 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Mei3bwKK3j4n"
+        "id": "Mei3bwKK3j4n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f51d2a6d-236b-4fee-e0a1-bdf1ce9c904c"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ],
+      "source": [
+        "import os\n",
+        "import pickle\n",
+        "from pathlib import Path\n",
+        "import numpy as np\n",
+        "from typing import Dict, List\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "# Import the necessary components from your original file\n",
+        "# Adjust the file name if your original code is saved under a different name\n",
+        "from adress_analyzer import ADReSSoAnalyzer, extend_analyzer_with_model\n",
+        "\n",
+        "class FeatureExtractionCheckpointer:\n",
+        "    def __init__(self, analyzer, output_dir=\"/content/drive/MyDrive/Voice/extracted/ADReSSo21/checkpoints\"):\n",
+        "        \"\"\"\n",
+        "        Initialize checkpointer for feature extraction\n",
+        "\n",
+        "        Args:\n",
+        "            analyzer: Instance of ADReSSoAnalyzer or the extended analyzer class\n",
+        "            output_dir: Directory to store checkpoints and features\n",
+        "        \"\"\"\n",
+        "        self.analyzer = analyzer\n",
+        "        self.output_dir = output_dir\n",
+        "        self.checkpoint_dir = os.path.join(output_dir, \"checkpoints\")\n",
+        "        self.feature_dir = os.path.join(output_dir, \"features\")\n",
+        "\n",
+        "        # Create directories if they don't exist\n",
+        "        os.makedirs(self.checkpoint_dir, exist_ok=True)\n",
+        "        os.makedirs(self.feature_dir, exist_ok=True)\n",
+        "\n",
+        "        # Initialize checkpoint tracking\n",
+        "        self.checkpoint_file = os.path.join(self.checkpoint_dir, \"checkpoint.pkl\")\n",
+        "        self.processed_files = set()\n",
+        "        self.features_dict = {}\n",
+        "\n",
+        "        # Load existing checkpoint if available\n",
+        "        self.load_checkpoint()\n",
+        "\n",
+        "    def load_checkpoint(self):\n",
+        "        \"\"\"Load existing checkpoint if available\"\"\"\n",
+        "        if os.path.exists(self.checkpoint_file):\n",
+        "            try:\n",
+        "                with open(self.checkpoint_file, 'rb') as f:\n",
+        "                    checkpoint = pickle.load(f)\n",
+        "                    self.processed_files = checkpoint.get('processed_files', set())\n",
+        "                    self.features_dict = checkpoint.get('features_dict', {})\n",
+        "                    print(f\"Loaded checkpoint with {len(self.processed_files)} processed files\")\n",
+        "            except Exception as e:\n",
+        "                print(f\"Error loading checkpoint: {str(e)}\")\n",
+        "                self.processed_files = set()\n",
+        "                self.features_dict = {}\n",
+        "        else:\n",
+        "            print(\"No checkpoint found, starting fresh\")\n",
+        "\n",
+        "    def save_checkpoint(self):\n",
+        "        \"\"\"Save current state as checkpoint\"\"\"\n",
+        "        checkpoint = {\n",
+        "            'processed_files': self.processed_files,\n",
+        "            'features_dict': self.features_dict\n",
+        "        }\n",
+        "        try:\n",
+        "            with open(self.checkpoint_file, 'wb') as f:\n",
+        "                pickle.dump(checkpoint, f)\n",
+        "            print(f\"Saved checkpoint to {self.checkpoint_file}\")\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error saving checkpoint: {str(e)}\")\n",
+        "\n",
+        "    def save_individual_feature(self, file_id: str, features: Dict):\n",
+        "        \"\"\"Save features for a single file\"\"\"\n",
+        "        feature_file = os.path.join(self.feature_dir, f\"{file_id}_features.pkl\")\n",
+        "        try:\n",
+        "            with open(feature_file, 'wb') as f:\n",
+        "                pickle.dump(features, f)\n",
+        "            print(f\"Saved features for {file_id} to {feature_file}\")\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error saving features for {file_id}: {str(e)}\")\n",
+        "\n",
+        "    def load_individual_feature(self, file_id: str) -> Dict:\n",
+        "        \"\"\"Load features for a single file\"\"\"\n",
+        "        feature_file = os.path.join(self.feature_dir, f\"{file_id}_features.pkl\")\n",
+        "        if os.path.exists(feature_file):\n",
+        "            try:\n",
+        "                with open(feature_file, 'rb') as f:\n",
+        "                    return pickle.load(f)\n",
+        "            except Exception as e:\n",
+        "                print(f\"Error loading features for {file_id}: {str(e)}\")\n",
+        "                return None\n",
+        "        return None\n",
+        "\n",
+        "    def extract_features_with_checkpoints(self, audio_files: Dict[str, List[str]]) -> Dict:\n",
+        "        \"\"\"\n",
+        "        Extract features with checkpointing and incremental saving\n",
+        "\n",
+        "        Args:\n",
+        "            audio_files: Dictionary of category-wise audio file paths\n",
+        "        Returns:\n",
+        "            Dictionary of extracted features\n",
+        "        \"\"\"\n",
+        "        print(\"\\n\" + \"=\"*60)\n",
+        "        print(\"EXTRACTING FEATURES WITH CHECKPOINTING\")\n",
+        "        print(\"=\"*60)\n",
+        "\n",
+        "        total_files = sum(len(files) for files in audio_files.values())\n",
+        "        processed_count = len(self.processed_files)\n",
+        "        print(f\"Total files to process: {total_files}\")\n",
+        "        print(f\"Already processed: {processed_count}\")\n",
+        "\n",
+        "        for category, files in audio_files.items():\n",
+        "            print(f\"\\nProcessing {category} ({len(files)} files)...\")\n",
+        "\n",
+        "            for file_path in files:\n",
+        "                filename = os.path.basename(file_path)\n",
+        "                file_id = f\"{category}_{filename}\"\n",
+        "\n",
+        "                # Skip if already processed\n",
+        "                if file_id in self.processed_files:\n",
+        "                    print(f\"  Skipping {filename} (already processed)\")\n",
+        "                    # Load existing features\n",
+        "                    features = self.load_individual_feature(file_id)\n",
+        "                    if features is not None:\n",
+        "                        self.features_dict[file_id] = features\n",
+        "                    continue\n",
+        "\n",
+        "                print(f\"  Extracting features for {filename}...\")\n",
+        "\n",
+        "                # Extract features\n",
+        "                try:\n",
+        "                    features = self.analyzer.extract_acoustic_features(file_path)\n",
+        "\n",
+        "                    if features is not None:\n",
+        "                        # Store in memory\n",
+        "                        self.features_dict[file_id] = features\n",
+        "                        # Save individual feature file\n",
+        "                        self.save_individual_feature(file_id, features)\n",
+        "                        # Add to processed files\n",
+        "                        self.processed_files.add(file_id)\n",
+        "                        # Save checkpoint\n",
+        "                        self.save_checkpoint()\n",
+        "                        processed_count += 1\n",
+        "                        print(f\"  Successfully processed {filename} ({processed_count}/{total_files})\")\n",
+        "                    else:\n",
+        "                        print(f\"  Warning: Failed to extract features for {filename}\")\n",
+        "\n",
+        "                except Exception as e:\n",
+        "                    print(f\"  Error processing {filename}: {str(e)}\")\n",
+        "                    continue\n",
+        "\n",
+        "                # Periodic status update\n",
+        "                if processed_count % 10 == 0:\n",
+        "                    print(f\"\\nProgress: {processed_count}/{total_files} files processed\")\n",
+        "                    print(f\"Checkpoint saved at {processed_count} files\")\n",
+        "\n",
+        "        print(f\"\\nFeature extraction completed!\")\n",
+        "        print(f\"Processed {processed_count}/{total_files} files\")\n",
+        "        print(f\"Features saved to: {self.feature_dir}\")\n",
+        "        print(f\"Checkpoints saved to: {self.checkpoint_dir}\")\n",
+        "\n",
+        "        return self.features_dict\n",
+        "\n",
+        "    def run_pipeline_with_checkpoints(self, num_epochs=30, batch_size=8):\n",
+        "        \"\"\"\n",
+        "        Run the complete pipeline with checkpointing\n",
+        "        \"\"\"\n",
+        "        print(\"=\"*80)\n",
+        "        print(\"RUNNING ADReSSo PIPELINE WITH CHECKPOINTING\")\n",
+        "        print(\"=\"*80)\n",
+        "\n",
+        "        # Run original pipeline up to feature extraction\n",
+        "        results = self.analyzer.run_complete_pipeline()\n",
+        "\n",
+        "        if results is None:\n",
+        "            print(\"Error in initial pipeline. Cannot proceed.\")\n",
+        "            return None\n",
+        "\n",
+        "        # Extract features with checkpointing\n",
+        "        features_dict = self.extract_features_with_checkpoints(results['audio_files'])\n",
+        "\n",
+        "        # Continue with model training and evaluation if extended analyzer\n",
+        "        if hasattr(self.analyzer, 'run_complete_pipeline_with_model'):\n",
+        "            print(\"\\nContinuing with model training...\")\n",
+        "            results = self.analyzer.run_complete_pipeline_with_model(\n",
+        "                num_epochs=num_epochs,\n",
+        "                batch_size=batch_size\n",
+        "            )\n",
+        "        else:\n",
+        "            print(\"\\nUsing base analyzer, skipping model training\")\n",
+        "            results['features_dict'] = features_dict\n",
+        "\n",
+        "        print(\"\\n\" + \"=\"*80)\n",
+        "        print(\"PIPELINE WITH CHECKPOINTING COMPLETED!\")\n",
+        "        print(\"=\"*80)\n",
+        "\n",
+        "        return results\n",
+        "\n",
+        "# Usage Example\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Mount Google Drive (required for Colab)\n",
+        "    try:\n",
+        "        from google.colab import drive\n",
+        "        drive.mount('/content/drive')\n",
+        "    except ImportError:\n",
+        "        print(\"Not running in Colab, skipping drive mount\")\n",
+        "\n",
+        "    # Install required packages\n",
+        "    try:\n",
+        "        import subprocess\n",
+        "        packages = [\n",
+        "            \"librosa\", \"soundfile\", \"opensmile\", \"speechbrain\",\n",
+        "            \"transformers\", \"torch\", \"openai-whisper\",\n",
+        "            \"pandas\", \"numpy\", \"matplotlib\", \"seaborn\", \"torch-geometric\"\n",
+        "        ]\n",
+        "        for pkg in packages:\n",
+        "            subprocess.check_call([\"pip\", \"install\", pkg])\n",
+        "        print(\"All required packages installed successfully\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error installing packages: {str(e)}\")\n",
+        "\n",
+        "    # Initialize the extended analyzer\n",
+        "    ExtendedAnalyzer = extend_analyzer_with_model()\n",
+        "    analyzer = ExtendedAnalyzer(base_path=\"/content/drive/MyDrive/Voice/extracted/ADReSSo21\")\n",
+        "\n",
+        "    # Create checkpointer with the initialized analyzer\n",
+        "    checkpointer = FeatureExtractionCheckpointer(analyzer)\n",
+        "\n",
+        "    # Run pipeline with checkpointing\n",
+        "    results = checkpointer.run_pipeline_with_checkpoints(\n",
+        "        num_epochs=5,\n",
+        "        batch_size=4\n",
+        "    )\n",
+        "\n",
+        "    if results:\n",
+        "        print(\"\\nPipeline with checkpointing completed successfully!\")\n",
+        "        print(f\"Check output directories for saved features and checkpoints:\")\n",
+        "        print(f\"- Features: {checkpointer.feature_dir}\")\n",
+        "        print(f\"- Checkpoints: {checkpointer.checkpoint_dir}\")\n",
+        "    else:\n",
+        "        print(\"Pipeline encountered errors. Please check the logs.\")"
+      ]
     }
   ],
   "metadata": {
@@ -3733,7 +3983,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyPVPsXvB0WI1W+t7J87ku+q",
+      "authorship_tag": "ABX9TyNEu0Q6HsJcVXdHw430MZBf",
       "include_colab_link": true
     },
     "kernelspec": {
