added Step 7: Model Evaluation

--- a/Insurance4paper.ipynb
+++ b/Insurance4paper.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOCyBpeKywgX85CkbwwW4ne",
+      "authorship_tag": "ABX9TyOMIFMmNPzAbGJYaoN0Dfhh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -726,6 +726,204 @@
         "id": "FbNXp3qRLcRF"
       },
       "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 6: Model Training with Bayesian Optimization\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "6bWcrXP9MQeL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train_models(X_train, y_train):\n",
+        "    def objective(trial):\n",
+        "        gb_params = {\n",
+        "            'n_estimators': trial.suggest_int('gb_n_estimators', 50, 200),\n",
+        "            'learning_rate': trial.suggest_float('gb_learning_rate', 0.01, 0.3),\n",
+        "            'max_depth': trial.suggest_int('gb_max_depth', 3, 7)\n",
+        "        }\n",
+        "        gb = GradientBoostingClassifier(**gb_params, random_state=42)\n",
+        "\n",
+        "        nn_params = {\n",
+        "            'hidden_layer_sizes': trial.suggest_categorical('nn_hidden_layers', [(50,50), (100,50), (100,100)]),\n",
+        "            'alpha': trial.suggest_float('nn_alpha', 1e-5, 1e-2, log=True)\n",
+        "        }\n",
+        "        nn = MLPClassifier(**nn_params, max_iter=1000, random_state=42)\n",
+        "\n",
+        "        lgb_params = {\n",
+        "            'n_estimators': trial.suggest_int('lgb_n_estimators', 50, 200),\n",
+        "            'learning_rate': trial.suggest_float('lgb_learning_rate', 0.01, 0.3),\n",
+        "            'num_leaves': trial.suggest_int('lgb_num_leaves', 20, 50)\n",
+        "        }\n",
+        "        lgb = LGBMClassifier(**lgb_params, random_state=42)\n",
+        "\n",
+        "        estimators = [('gb', gb), ('nn', nn), ('lgb', lgb)]\n",
+        "        stack = StackingClassifier(estimators=estimators, final_estimator=GradientBoostingClassifier())\n",
+        "\n",
+        "        scores = cross_val_score(stack, X_train, y_train, cv=5, scoring='roc_auc')\n",
+        "        return scores.mean()\n",
+        "\n",
+        "    study = optuna.create_study(direction='maximize')\n",
+        "    study.optimize(objective, n_trials=20)\n",
+        "\n",
+        "    # Visualization: Optimization History\n",
+        "    plt.figure(figsize=(8, 6))\n",
+        "    optuna.visualization.plot_optimization_history(study)\n",
+        "    plt.title('Hyperparameter Optimization History')\n",
+        "    plt.show()\n",
+        "\n",
+        "    # Train final models\n",
+        "    best_params = study.best_params\n",
+        "    gb = GradientBoostingClassifier(\n",
+        "        n_estimators=best_params['gb_n_estimators'],\n",
+        "        learning_rate=best_params['gb_learning_rate'],\n",
+        "        max_depth=best_params['gb_max_depth'],\n",
+        "        random_state=42\n",
+        "    )\n",
+        "    nn = MLPClassifier(\n",
+        "        hidden_layer_sizes=best_params['nn_hidden_layers'],\n",
+        "        alpha=best_params['nn_alpha'],\n",
+        "        max_iter=1000,\n",
+        "        random_state=42\n",
+        "    )\n",
+        "    lgb = LGBMClassifier(\n",
+        "        n_estimators=best_params['lgb_n_estimators'],\n",
+        "        learning_rate=best_params['lgb_learning_rate'],\n",
+        "        num_leaves=best_params['lgb_num_leaves'],\n",
+        "        random_state=42\n",
+        "    )\n",
+        "\n",
+        "    estimators = [('gb', gb), ('nn', nn), ('lgb', lgb)]\n",
+        "    stack = StackingClassifier(estimators=estimators, final_estimator=GradientBoostingClassifier())\n",
+        "\n",
+        "    for name, model in estimators:\n",
+        "        model.fit(X_train, y_train)\n",
+        "    stack.fit(X_train, y_train)\n",
+        "\n",
+        "    return {'gb': gb, 'nn': nn, 'lgb': lgb, 'stack': stack}\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vIDTkDcpMbmn"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 7: Model Evaluation\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "mEa2hKLZMzrl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def evaluate_models(models, X_test, y_test):\n",
+        "    results = {}\n",
+        "    plt.figure(figsize=(15, 10))\n",
+        "\n",
+        "    # ROC Curves\n",
+        "    plt.subplot(2, 2, 1)\n",
+        "    for name, model in models.items():\n",
+        "        y_pred_proba = model.predict_proba(X_test)[:, 1]\n",
+        "        fpr, tpr, _ = roc_curve(y_test, y_pred_proba)\n",
+        "        auc = roc_auc_score(y_test, y_pred_proba)\n",
+        "        plt.plot(fpr, tpr, label=f'{name} (AUC = {auc:.4f})')\n",
+        "        y_pred = model.predict(X_test)\n",
+        "\n",
+        "        results[name] = {\n",
+        "            'accuracy': accuracy_score(y_test, y_pred),\n",
+        "            'precision': precision_score(y_test, y_pred, zero_division=0),\n",
+        "            'recall': recall_score(y_test, y_pred, zero_division=0),\n",
+        "            'f1': f1_score(y_test, y_pred, zero_division=0),\n",
+        "            'mcc': matthews_corrcoef(y_test, y_pred),\n",
+        "            'auc_roc': auc\n",
+        "        }\n",
+        "\n",
+        "    plt.plot([0, 1], [0, 1], 'k--')\n",
+        "    plt.xlabel('False Positive Rate')\n",
+        "    plt.ylabel('True Positive Rate')\n",
+        "    plt.title('ROC Curves')\n",
+        "    plt.legend()\n",
+        "\n",
+        "    # Confusion Matrices\n",
+        "    for i, (name, model) in enumerate(models.items(), 2):\n",
+        "        plt.subplot(2, 2, i)\n",
+        "        y_pred = model.predict(X_test)\n",
+        "        cm = confusion_matrix(y_test, y_pred)\n",
+        "        sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
+        "        plt.title(f'{name} Confusion Matrix')\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "    # Metrics Comparison\n",
+        "    metrics_df = pd.DataFrame(results).T\n",
+        "    plt.figure(figsize=(10, 6))\n",
+        "    metrics_df.plot(kind='bar')\n",
+        "    plt.title('Model Performance Comparison')\n",
+        "    plt.ylabel('Score')\n",
+        "    plt.xticks(rotation=45)\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "    return results\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "j-ZKLKx4MjY0"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 8: Interpretability\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "UVetuDzqMvEN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def interpret_models(models, X_train, X_test, feature_names, sample_idx=0):\n",
+        "    explainer = shap.KernelExplainer(\n",
+        "        models['stack'].predict_proba, shap.sample(X_train, 100)\n",
+        "    )\n",
+        "    shap_values = explainer.shap_values(X_test[sample_idx:sample_idx+1])\n",
+        "\n",
+        "    # SHAP Summary Plot\n",
+        "    shap.summary_plot(shap_values[1], X_test, feature_names=feature_names, show=False)\n",
+        "    plt.title('SHAP Feature Importance')\n",
+        "    plt.show()\n",
+        "\n",
+        "    lime_explainer = lime.lime_tabular.LimeTabularExplainer(\n",
+        "        X_train, feature_names=feature_names, class_names=['No Claim', 'Claim'], mode='classification'\n",
+        "    )\n",
+        "    lime_exp = lime_explainer.explain_instance(X_test[sample_idx], models['stack'].predict_proba)\n",
+        "\n",
+        "    # LIME Plot\n",
+        "    lime_exp.show_in_notebook(show_table=True, show_all=False)\n",
+        "\n",
+        "    return shap_values, lime_exp\n"
+      ],
+      "metadata": {
+        "id": "ECDeYqogMr2i"
+      },
+      "execution_count": 21,
       "outputs": []
     }
   ]
