--- a/Alz_voice.ipynb
+++ b/Alz_voice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKG6qZT+NkowECQAUaR9if",
+      "authorship_tag": "ABX9TyNp4uDy776uFJxyggOWWH+D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,295 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/fjadidi2001/AD_Prediction/blob/main/Alz_voice.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Complete ADReSSo Multi-Modal Analysis Pipeline Steps\n",
+        "\n",
+        "## Project Overview\n",
+        "This project implements a comprehensive multi-modal machine learning pipeline for Alzheimer's Dementia Recognition through Spontaneous Speech (ADReSSo). The system combines audio processing, text analysis, and advanced deep learning architectures to classify speech samples as either cognitively normal (CN) or showing signs of Alzheimer's disease (AD).\n",
+        "\n",
+        "## Pipeline Architecture Components\n",
+        "\n",
+        "### Core Models Used:\n",
+        "- **Graph-based Attention Module**: For semantic relationship modeling\n",
+        "- **Vision Transformer (ViT)**: For spectrogram analysis\n",
+        "- **U-Net**: For audio feature processing\n",
+        "- **AlexNet**: For additional feature extraction\n",
+        "- **BERT**: For text processing and linguistic analysis\n",
+        "- **Wav2Vec2**: For audio feature extraction\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Step-by-Step Pipeline Process\n",
+        "\n",
+        "### Step 0: Environment Setup and Data Preparation\n",
+        "**Purpose**: Initialize the analysis environment and prepare the dataset\n",
+        "\n",
+        "**Actions**:\n",
+        "- Mount Google Drive\n",
+        "- Install required packages: `librosa`, `soundfile`, `opensmile`, `speechbrain`, `transformers`, `torch`, `openai-whisper`, `pandas`, `numpy`, `matplotlib`, `seaborn`, `torch-geometric`\n",
+        "- Set up base directory structure\n",
+        "- Initialize output directories for results\n",
+        "\n",
+        "**Key Files**:\n",
+        "- Audio files organized by categories (diagnosis_ad, diagnosis_cn, progression_decline, progression_no_decline)\n",
+        "- Configuration files and model checkpoints\n",
+        "\n",
+        "### Step 1: Audio File Discovery and Organization\n",
+        "**Purpose**: Scan and categorize all available audio files\n",
+        "\n",
+        "**Actions**:\n",
+        "- Recursively search for audio files (.wav, .mp3, .m4a, .flac)\n",
+        "- Categorize files based on directory structure:\n",
+        "  - `diagnosis_ad/`: Alzheimer's disease diagnosis files\n",
+        "  - `diagnosis_cn/`: Cognitively normal diagnosis files\n",
+        "  - `progression_decline/`: Disease progression (decline) files\n",
+        "  - `progression_no_decline/`: Disease progression (stable) files\n",
+        "- Generate file inventory and statistics\n",
+        "\n",
+        "**Output**: Dictionary of categorized audio file paths\n",
+        "\n",
+        "### Step 2: Audio Processing and Feature Extraction\n",
+        "**Purpose**: Extract comprehensive acoustic features from audio files\n",
+        "\n",
+        "**Feature Types Extracted**:\n",
+        "- **Wav2Vec2 Features**: Deep learning-based audio representations\n",
+        "- **Mel-frequency Cepstral Coefficients (MFCCs)**: Traditional audio features\n",
+        "- **Spectral Features**: Spectral centroid, bandwidth, rolloff\n",
+        "- **Prosodic Features**: Pitch, energy, rhythm patterns\n",
+        "- **OpenSMILE Features**: Comprehensive acoustic feature set\n",
+        "\n",
+        "**Processing Steps**:\n",
+        "- Load and preprocess audio files\n",
+        "- Extract multi-dimensional feature vectors\n",
+        "- Apply feature normalization and scaling\n",
+        "- Generate mel-spectrograms for visual analysis\n",
+        "\n",
+        "### Step 3: Speech-to-Text Conversion\n",
+        "**Purpose**: Convert audio to text for linguistic analysis\n",
+        "\n",
+        "**Tools Used**:\n",
+        "- **OpenAI Whisper**: For high-quality speech transcription\n",
+        "- **Alternative ASR systems**: Fallback options for different audio qualities\n",
+        "\n",
+        "**Processing**:\n",
+        "- Transcribe all audio files to text\n",
+        "- Handle different audio qualities and accents\n",
+        "- Store transcriptions with confidence scores\n",
+        "- Generate metadata for each transcription\n",
+        "\n",
+        "### Step 4: Linguistic Feature Analysis\n",
+        "**Purpose**: Extract detailed linguistic and semantic features from transcribed text\n",
+        "\n",
+        "**Feature Categories**:\n",
+        "- **Semantic Features**: Word embeddings, semantic density\n",
+        "- **Syntactic Features**: Part-of-speech patterns, sentence structure\n",
+        "- **Lexical Features**: Vocabulary diversity, word frequency\n",
+        "- **Discourse Features**: Coherence, topic transitions\n",
+        "- **Fluency Measures**: Pause patterns, disfluencies\n",
+        "\n",
+        "**Processing**:\n",
+        "- Use BERT for semantic embeddings\n",
+        "- Apply NLP tools for syntactic analysis\n",
+        "- Calculate linguistic complexity metrics\n",
+        "- Extract discourse markers and patterns\n",
+        "\n",
+        "### Step 5: Comprehensive Analysis and Visualization\n",
+        "**Purpose**: Analyze extracted features and generate comprehensive reports\n",
+        "\n",
+        "**Analysis Types**:\n",
+        "- **Statistical Analysis**: Feature distributions, correlations\n",
+        "- **Visualization**: Feature plots, spectrograms, linguistic patterns\n",
+        "- **Comparative Analysis**: AD vs CN differences\n",
+        "- **Quality Assessment**: Data quality metrics\n",
+        "\n",
+        "**Outputs**:\n",
+        "- Feature correlation matrices\n",
+        "- Statistical summary reports\n",
+        "- Visualization plots and charts\n",
+        "- Data quality assessments\n",
+        "\n",
+        "### Step 6: Multi-Modal Model Architecture Definition\n",
+        "**Purpose**: Define the complex neural network architecture for classification\n",
+        "\n",
+        "**Architecture Components**:\n",
+        "```\n",
+        "MultiModalADReSSoModel:\n",
+        "├── Graph Attention Module\n",
+        "│   ├── Semantic graph construction\n",
+        "│   └── Graph attention networks\n",
+        "├── Vision Transformer Module\n",
+        "│   ├── Spectrogram patch embedding\n",
+        "│   └── Transformer encoder layers\n",
+        "├── U-Net Module\n",
+        "│   ├── Audio signal processing\n",
+        "│   └── Feature extraction layers\n",
+        "├── AlexNet Module\n",
+        "│   ├── Convolutional feature extraction\n",
+        "│   └── Classification layers\n",
+        "├── BERT Module\n",
+        "│   ├── Text embedding\n",
+        "│   └── Linguistic feature extraction\n",
+        "└── Fusion Layer\n",
+        "    ├── Multi-modal feature fusion\n",
+        "    └── Final classification\n",
+        "```\n",
+        "\n",
+        "**Key Parameters**:\n",
+        "- Audio feature dimension: 768 (Wav2Vec2)\n",
+        "- Text feature dimension: 768 (BERT)\n",
+        "- Spectrogram height: 80 (Mel bins)\n",
+        "- Number of classes: 2 (AD vs CN)\n",
+        "\n",
+        "### Step 7: Model Training\n",
+        "**Purpose**: Train the multi-modal model on the processed dataset\n",
+        "\n",
+        "**Training Configuration**:\n",
+        "- **Batch Size**: 8 (adjustable based on GPU memory)\n",
+        "- **Epochs**: 30 (with early stopping)\n",
+        "- **Learning Rate**: Adaptive with scheduler\n",
+        "- **Optimization**: Adam optimizer\n",
+        "- **Loss Function**: Cross-entropy loss\n",
+        "\n",
+        "**Data Splitting**:\n",
+        "- Training: 60% of data\n",
+        "- Validation: 20% of data\n",
+        "- Testing: 20% of data\n",
+        "- Stratified splitting to maintain class balance\n",
+        "\n",
+        "**Training Process**:\n",
+        "- Initialize model with random weights\n",
+        "- Create data loaders for each split\n",
+        "- Implement training loop with validation\n",
+        "- Save best model based on validation performance\n",
+        "- Monitor training metrics and convergence\n",
+        "\n",
+        "### Step 8: Model Evaluation and Semantic Analysis\n",
+        "**Purpose**: Evaluate model performance and analyze semantic relationships\n",
+        "\n",
+        "**Evaluation Metrics**:\n",
+        "- **Accuracy**: Overall classification accuracy\n",
+        "- **Precision**: True positive rate\n",
+        "- **Recall**: Sensitivity\n",
+        "- **F1-Score**: Harmonic mean of precision and recall\n",
+        "- **ROC AUC**: Area under ROC curve\n",
+        "\n",
+        "**Semantic Analysis**:\n",
+        "- Visualize semantic relationships between audio and text features\n",
+        "- Generate semantic graphs showing feature correlations\n",
+        "- Analyze modality contributions to predictions\n",
+        "- Create interpretability visualizations\n",
+        "\n",
+        "**Analysis Outputs**:\n",
+        "- Confusion matrices\n",
+        "- ROC curves\n",
+        "- Feature importance plots\n",
+        "- Semantic relationship graphs\n",
+        "- Detailed classification reports\n",
+        "\n",
+        "### Step 9: Checkpointing and Incremental Processing\n",
+        "**Purpose**: Implement robust checkpointing system for large-scale processing\n",
+        "\n",
+        "**Checkpointing Features**:\n",
+        "- **Incremental Processing**: Resume from last checkpoint\n",
+        "- **Individual Feature Saving**: Save features for each file separately\n",
+        "- **Progress Tracking**: Monitor processing status\n",
+        "- **Error Recovery**: Handle processing failures gracefully\n",
+        "\n",
+        "**Checkpoint Structure**:\n",
+        "```\n",
+        "checkpoints/\n",
+        "├── checkpoint.pkl (main checkpoint file)\n",
+        "├── features/ (individual feature files)\n",
+        "│   ├── diagnosis_ad_file1_features.pkl\n",
+        "│   ├── diagnosis_cn_file1_features.pkl\n",
+        "│   └── ...\n",
+        "└── logs/ (processing logs)\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Advanced Features\n",
+        "\n",
+        "### Semantic Graph Visualization\n",
+        "- Create networkx graphs showing relationships between audio and text features\n",
+        "- Visualize cosine similarity between modalities\n",
+        "- Generate interactive relationship plots\n",
+        "- Analyze semantic coherence between speech and content\n",
+        "\n",
+        "### Feature Importance Analysis\n",
+        "- Calculate contribution of each modality to final predictions\n",
+        "- Analyze which features are most discriminative\n",
+        "- Generate feature importance rankings\n",
+        "- Create modality-specific performance metrics\n",
+        "\n",
+        "### Comprehensive Reporting\n",
+        "- Generate detailed evaluation reports\n",
+        "- Create performance summaries by category\n",
+        "- Analyze misclassification patterns\n",
+        "- Provide confidence-based analysis\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Usage Instructions\n",
+        "\n",
+        "### Basic Usage:\n",
+        "```python\n",
+        "# Initialize the extended analyzer\n",
+        "ExtendedAnalyzer = extend_analyzer_with_model()\n",
+        "analyzer = ExtendedAnalyzer(base_path=\"/path/to/ADReSSo21\")\n",
+        "\n",
+        "# Create checkpointer\n",
+        "checkpointer = FeatureExtractionCheckpointer(analyzer)\n",
+        "\n",
+        "# Run complete pipeline\n",
+        "results = checkpointer.run_pipeline_with_checkpoints(\n",
+        "    num_epochs=30,\n",
+        "    batch_size=8\n",
+        ")\n",
+        "```\n",
+        "\n",
+        "### Advanced Configuration:\n",
+        "```python\n",
+        "# Custom training parameters\n",
+        "results = checkpointer.run_pipeline_with_checkpoints(\n",
+        "    num_epochs=50,\n",
+        "    batch_size=4  # Reduce for limited GPU memory\n",
+        ")\n",
+        "\n",
+        "# Individual steps\n",
+        "analyzer.step_6_define_model_architecture()\n",
+        "analyzer.step_7_train_model(features_dict, linguistic_features)\n",
+        "analyzer.step_8_evaluate_model(visualize_graphs=True)\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Output Files and Results\n",
+        "\n",
+        "### Generated Files:\n",
+        "- `detailed_evaluation_results.csv`: Per-sample predictions and confidence scores\n",
+        "- `evaluation_summary.json`: Overall performance metrics\n",
+        "- `semantic_graph_*.png`: Semantic relationship visualizations\n",
+        "- `best_adresso_model.pth`: Trained model weights\n",
+        "- `checkpoint.pkl`: Processing checkpoint data\n",
+        "- Individual feature files for each audio sample\n",
+        "\n",
+        "### Key Metrics Tracked:\n",
+        "- Overall classification accuracy\n",
+        "- Per-category performance (AD, CN, decline, stable)\n",
+        "- Confidence distributions\n",
+        "- Misclassification analysis\n",
+        "- Feature importance by modality\n",
+        "- Semantic relationship strengths\n",
+        "\n",
+        "This comprehensive pipeline provides a complete solution for Alzheimer's dementia recognition through multi-modal analysis of spontaneous speech, combining state-of-the-art deep learning techniques with robust feature extraction and evaluation methodologies."
+      ],
+      "metadata": {
+        "id": "r6-B0HUC0xdC"
+      }
     },
     {
       "cell_type": "code",
