added device = text_features.device  # Get the device of input features (e.g., cuda:0 or cpu)

--- a/Final_prediction_From_Addresso.ipynb
+++ b/Final_prediction_From_Addresso.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM6hYQVwNF/yYkfPf4Fl6Sq",
+      "authorship_tag": "ABX9TyNrcULdhj/xBsG+qz/iyDg6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4703,6 +4703,7 @@
         "        \"\"\"Create semantic relationship graph between audio and text\"\"\"\n",
         "        batch_size = text_features.shape[0]\n",
         "        graphs = []\n",
+        "        device = text_features.device  # Get the device of input features (e.g., cuda:0 or cpu)\n",
         "\n",
         "        for i in range(batch_size):\n",
         "            # Compute similarity matrix\n",
@@ -5780,7 +5781,6 @@
       ],
       "metadata": {
         "id": "hyYIXIo-Z9Tf",
-        "outputId": "46a60f07-a6b3-4492-e293-b62b7766d73c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000,
@@ -5907,7 +5907,8 @@
             "e5daa89be12a4273babe9b1d6bd584fa",
             "5f62095a9bba42bbb3a4e500c0e0abd2"
           ]
-        }
+        },
+        "outputId": "46a60f07-a6b3-4492-e293-b62b7766d73c"
       },
       "execution_count": 7,
       "outputs": [
